--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <nav class="nav-blur">
         <div class="nav-container">
             <a href="#home" class="nav-link">Home</a>
+            <a href="#about-me" class="nav-link">About Me</a>
             <a href="#projects" class="nav-link">Projects</a>
             <a href="#skills" class="nav-link">Skills</a>
             <a href="#contact" class="nav-link">Contact</a>
@@ -47,7 +48,38 @@
         <div class="geo-shape shape-bottom-4"></div>
     </section>
 
-    <!-- Projects section -->
+    <!-- About me section -->
+    <section id="about-me" class="section about">
+        <h2 class="section-title about-title">About Me</h2>
+        <div class="about-floating about-emoji-1" aria-hidden="true">🎬</div>
+        <div class="about-floating about-emoji-2" aria-hidden="true">🎥</div>
+        <div class="about-floating about-emoji-3" aria-hidden="true">👨‍🍳</div>
+        <div class="about-floating about-emoji-4" aria-hidden="true">🍳</div>
+        <div class="about-floating about-emoji-5" aria-hidden="true">💻</div>
+        <div class="about-floating about-emoji-6" aria-hidden="true">🤖</div>
+        <div class="about-card">
+            <div class="about-photo">
+                <img src="https://i.ibb.co/sdgfSGk6/IMG-20241213-WA0001.jpg" alt="Portrait of me" />
+            </div>
+            <div class="about-text">
+                <p>
+                    I’m Paulo, a computer science student who went throught a lot of different degrees like culinary arts and cinema, 
+                    before finding his way into programming. Nevermore, cooking and cinema helped me develop creativity, problem-solving 
+                    and especially taking control over the pressure in front of a situtaion that seems insurmountable. <br>
+                    <br>
+                    This envy to start programming came from people around me, who were already coding and making cool stuff, and I was looking
+                    for something productive to do on my computer since I was spending around 15h on it per days playing video-games and still bored. Before, I 
+                    was completely unaware and ignorant about the possibilities that programming could offer. So I decided to give it a shot
+                    by coding by myself with youtube first, and then I started to study computer science at YNOV Bordeaux Campus university. <br>
+                    <br>
+                    For now, I'm looking forward to becoming a full-stack developer (I'm also very curious about cybersecurity and robotics), and work on 
+                    exciting projects that can make a differce (why not changing the world?). In the meantime, feel free to check out my projects 
+                    ! I'm open for collaborations and new opportunities. Reach out if have any questions or just want to connect ;)!
+                </p>
+            </div>
+        </div>
+    </section>
+     <!-- Projects section --> 
     <section id="projects" class="section">
         <h2 class="section-title">My Projects</h2>
         <div class="projects-grid">
@@ -124,9 +156,17 @@
         <div class="contact-card">
             <p>Interested in my work? Feel free to reach out to me!</p>
             <div class="contact-links">
-                <a href="mailto:your.email@example.com" class="contact-btn">Email</a>
-                <a href="https://github.com/your-username" class="contact-btn">GitHub</a>
-                <a href="https://linkedin.com/in/your-profile" class="contact-btn">LinkedIn</a>
+                <a href="mailto:your.email@example.com" class="contact-btn" aria-label="Email">
+                    <span class="contact-icon">✉️</span>
+                </a>
+                <a href="https://github.com/your-username" class="contact-btn" aria-label="GitHub">
+                    <svg class="contact-icon" viewBox="0 0 24 24" aria-hidden="true" fill="currentColor" width="24" height="24">
+                        <path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/>
+                    </svg>
+                </a>
+                <a href="https://linkedin.com/in/your-profile" class="contact-btn" aria-label="LinkedIn">
+                    <span class="contact-icon">🔗</span>
+                </a>
             </div>
         </div>
     </section>
