--- a/index.html
+++ b/index.html
@@ -85,34 +85,48 @@
         <div class="projects-grid">
             <!-- Carte de projet avec effet glassmorphism -->
             <div class="project-card">
-                <div class="project-icon">🚀</div>
-                <h3>Project 1</h3>
-                <p>Description of your first interesting project</p>
+                <img src="https://i.ibb.co/x8JcC5Y7/image.png" alt="Power4" class="project-image">
+                <h3>Power 4</h3>
+                <p>This is one among my very first projects (you can tell by how not optimised the code is)
+                    . I recreated the famous game power 4. I tried to focus my work on the estethism of the 
+                page since i wanted something "chill-looking". </p>
+                <div class="project-description">
+                    <p>Detailed explanation of what you built, the technologies used, and the challenges you solved.</p>
+                </div>
                 <div class="project-tags">
                     <span class="tag">HTML</span>
                     <span class="tag">CSS</span>
                     <span class="tag">Golang</span>
                 </div>
+                <a href="https://github.com/sclauky/power4" class="project-link" target="_blank" rel="noopener noreferrer">View Project →</a>
             </div>
 
             <div class="project-card">
-                <div class="project-icon">💻</div>
+                <img src="project2.jpg" alt="Project 2" class="project-image">
                 <h3>Project 2</h3>
                 <p>Description of your second project</p>
+                <div class="project-description">
+                    <p>Detailed explanation of what you built, the technologies used, and the challenges you solved.</p>
+                </div>
                 <div class="project-tags">
                     <span class="tag">Java</span>
                     <span class="tag">Web</span>
                 </div>
+                <a href="#" class="project-link">View Project →</a>
             </div>
 
             <div class="project-card">
-                <div class="project-icon">🎨</div>
+                <img src="project3.jpg" alt="Project 3" class="project-image">
                 <h3>Project 3</h3>
                 <p>A project that showcases your design skills</p>
+                <div class="project-description">
+                    <p>Detailed explanation of what you built, the technologies used, and the challenges you solved.</p>
+                </div>
                 <div class="project-tags">
                     <span class="tag">Design</span>
                     <span class="tag">CSS</span>
                 </div>
+                <a href="#" class="project-link">View Project →</a>
             </div>
         </div>
     </section>
@@ -156,16 +170,30 @@
         <div class="contact-card">
             <p>Interested in my work? Feel free to reach out to me!</p>
             <div class="contact-links">
-                <a href="mailto:your.email@example.com" class="contact-btn" aria-label="Email">
-                    <span class="contact-icon">✉️</span>
+                <a href="mailto:paulo.grienen@gmail.com" class="contact-btn" aria-label="Email">
+                    <svg class="contact-icon" viewBox="0 0 24 24" aria-hidden="true" fill="currentColor" width="24" height="24">
+                        <path d="M20 4H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"/>
+                    </svg>
                 </a>
-                <a href="https://github.com/your-username" class="contact-btn" aria-label="GitHub">
+                <a href="https://github.com/sclauky" class="contact-btn" aria-label="GitHub">
                     <svg class="contact-icon" viewBox="0 0 24 24" aria-hidden="true" fill="currentColor" width="24" height="24">
                         <path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/>
                     </svg>
                 </a>
-                <a href="https://linkedin.com/in/your-profile" class="contact-btn" aria-label="LinkedIn">
-                    <span class="contact-icon">🔗</span>
+                <a href="https://linkedin.com/in/paul-grienenberger" class="contact-btn" aria-label="LinkedIn">
+                    <svg class="contact-icon" viewBox="0 0 24 24" aria-hidden="true" fill="currentColor" width="24" height="24">
+                        <path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.225 0z"/>
+                    </svg>
+                </a>
+                <a href="cv.pdf" class="contact-btn" aria-label="CV">
+                    <svg class="contact-icon" viewBox="0 0 24 24" aria-hidden="true" fill="currentColor" width="24" height="24">
+                        <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8l-6-6z"/>
+                        <polyline points="14 2 14 8 20 8"/>
+                        <line x1="12" y1="13" x2="8" y2="13"/>
+                        <line x1="12" y1="17" x2="8" y2="17"/>
+                        <polyline points="9 9 8 10 9 11"/>
+                        <polyline points="15 9 14 10 15 11"/>
+                    </svg>
                 </a>
             </div>
         </div>
@@ -173,7 +201,7 @@
 
     <!-- Footer -->
     <footer class="footer">
-        <p>&copy; 2026 Paul GRIENENBERGER</p>
+        <p>&copy; 2026 Paul GRIENENBERGER Tout droit réservé</p>
     </footer>
 </body>
 </html>
