--- a/index.html
+++ b/index.html
@@ -14,11 +14,20 @@
     <!-- Navigation flottante avec effet de flou -->
     <nav class="nav-blur">
         <div class="nav-container">
-            <a href="#home" class="nav-link">Home</a>
-            <a href="#about-me" class="nav-link">About Me</a>
-            <a href="#projects" class="nav-link">Projects</a>
-            <a href="#skills" class="nav-link">Skills</a>
-            <a href="#contact" class="nav-link">Contact</a>
+            <div class="nav-links">
+                <a href="#home" class="nav-link">Home</a>
+                <a href="#about-me" class="nav-link">About Me</a>
+                <a href="#projects" class="nav-link">Projects</a>
+                <a href="#skills" class="nav-link">Skills</a>
+                <a href="#contact" class="nav-link">Contact</a>
+            </div>
+            <button class="theme-toggle" type="button" aria-label="Activer le mode jour">
+                <span class="theme-icon" aria-hidden="true">🌙</span>
+            </button>
+            <div class="visit-counter">
+                <span class="counter-label">Visites :</span>
+                <span class="counter-value">0</span>
+            </div>
         </div>
     </nav>
 
@@ -203,5 +212,41 @@
     <footer class="footer">
         <p>&copy; 2026 Paul GRIENENBERGER Tout droit réservé</p>
     </footer>
+
+    <script>
+        (function () {
+            const root = document.documentElement;
+            const toggle = document.querySelector('.theme-toggle');
+            const icon = toggle?.querySelector('.theme-icon');
+            const stored = localStorage.getItem('theme');
+            const prefersLight = window.matchMedia('(prefers-color-scheme: light)').matches;
+            const initialTheme = stored || (prefersLight ? 'light' : 'dark');
+
+            const applyTheme = (theme) => {
+                root.setAttribute('data-theme', theme);
+                if (icon) {
+                    icon.textContent = theme === 'light' ? '☀️' : '🌙';
+                    toggle.setAttribute('aria-label', theme === 'light' ? 'Activer le mode nuit' : 'Activer le mode jour');
+                }
+            };
+
+            applyTheme(initialTheme);
+
+            toggle?.addEventListener('click', () => {
+                const nextTheme = root.getAttribute('data-theme') === 'light' ? 'dark' : 'light';
+                applyTheme(nextTheme);
+                localStorage.setItem('theme', nextTheme);
+            });
+
+            // Visit counter
+            const counterValue = document.querySelector('.counter-value');
+            let visits = parseInt(localStorage.getItem('visitCount')) || 0;
+            visits += 1;
+            localStorage.setItem('visitCount', visits);
+            if (counterValue) {
+                counterValue.textContent = visits;
+            }
+        })();
+    </script>
 </body>
 </html>
